src/test/resources/functionly/bad/syntax/bad3.fly
public function bad3(a, b, c)
begin
  if (a - b) else begin
    x = b;
  end;
end
